Fixed page header spacing bug, fixed Reliable mobile logo

--- a/styles/Boot.scss
+++ b/styles/Boot.scss
@@ -68,7 +68,7 @@ a:hover {
         display: none !important;
     }
 
-    .content-container {
+    .content.container {
         margin-top: 10vh;
     }
 }
