--- a/styles/Content.scss
+++ b/styles/Content.scss
@@ -1,4 +1,4 @@
-.content-container {
+.content.container {
     h1:first-of-type {
         text-align: left;
         font-size: 5rem;
@@ -23,7 +23,7 @@
 
 // Mobile
 @media screen and (max-width: $mobile-width) {
-    .content-container {
+    .content.container {
         h1:first-of-type {
             font-size: 3.5rem;
             padding-top: 0px;
