--- a/styles/WorkItem.scss
+++ b/styles/WorkItem.scss
@@ -127,8 +127,9 @@
 
     #reliable-mono,
     #reliable-color {
-        margin-top: -35px;
-        // width: 100%;
+        margin-top: -30px;
+        width: 100%;
+        height: auto;
     }
 }
 
